updated controllers